tests/transpiler/x/zig/math_ops.zig
// Generated by Mochi Zig transpiler on 2025-07-21 11:24 +0000
const std = @import("std");

pub fn main() void {
    try std.io.getStdOut().writer().print("{any}\n", .{6 * 7});
    try std.io.getStdOut().writer().print("{any}\n", .{7 / 2});
    try std.io.getStdOut().writer().print("{any}\n", .{7 % 2});
}
